feat: adicionando schema de maintenance, getAll, getOne, create e validações de dados
